--- a/index.html
+++ b/index.html
@@ -9,72 +9,23 @@
   * { box-sizing: border-box; }
   body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:#111; color:#eee; }
   header { padding:14px 16px; text-align:center; font-weight:600; }
-  .grid {
-    display:grid; gap:var(--gap);
-    grid-template-columns: 1fr;               /* mobile par défaut */
-    padding: var(--gap);
-    max-width: 1200px; margin: 0 auto;
-  }
-  /* vignettes “cartes” */
-  .card {
-    background:#1a1a1a; border-radius:16px; overflow:hidden;
-    box-shadow: 0 6px 20px rgba(0,0,0,.35);
-  }
-  .thumb {
-    /* Mobile/tablette : ratio agréable */
-    aspect-ratio: 4/3; width:100%;
-    background:#222 center/cover no-repeat;
-    user-select:none; -webkit-user-drag: none;
-  }
+  .grid { display:grid; gap:var(--gap); grid-template-columns: 1fr; padding: var(--gap); max-width: 1200px; margin: 0 auto; }
+  .card { background:#1a1a1a; border-radius:16px; overflow:hidden; box-shadow: 0 6px 20px rgba(0,0,0,.35); }
+  .thumb { aspect-ratio: 4/3; width:100%; background:#222 center/cover no-repeat; user-select:none; -webkit-user-drag: none; }
   .cap { padding:10px 12px; font-size:14px; opacity:.85; background: rgba(255,255,255,.04); }
-
-  /* Empêche clic droit / glisser (dissuasion) */
-  html { -webkit-touch-callout: none; }
-  body img { pointer-events:none; -webkit-user-drag: none; }
-  /* Visionneuse */
-  .lightbox {
-    position: fixed; inset:0; display:none; place-items:center;
-    background: rgba(0,0,0,.9); z-index: 9999;
-  }
+  .lightbox { position: fixed; inset:0; display:none; place-items:center; background: rgba(0,0,0,.9); z-index: 9999; }
   .lightbox.open { display:grid; }
-  .stage {
-    width: min(92vw, 1400px); height: min(92vh, 90vw);
-    background: center/contain no-repeat;
-    user-select:none; -webkit-user-drag: none;
-    position:relative;
-  }
-  .ui { position: absolute; inset:auto 0 0 0; display:flex; gap:8px;
-        justify-content: center; padding: 12px; }
-  .btn {
-    background: rgba(255,255,255,.08); border: 1px solid rgba(255,255,255,.15);
-    padding:10px 14px; border-radius: 999px; cursor: pointer; backdrop-filter: blur(6px);
-  }
+  .stage { width: min(92vw, 1400px); height: min(92vh, 90vw); background: center/contain no-repeat; user-select:none; -webkit-user-drag: none; position:relative; }
+  .ui { position: absolute; inset:auto 0 0 0; display:flex; gap:8px; justify-content: center; padding: 12px; }
+  .btn { background: rgba(255,255,255,.08); border: 1px solid rgba(255,255,255,.15); padding:10px 14px; border-radius: 999px; cursor: pointer; backdrop-filter: blur(6px); }
   .btn:active { transform: translateY(1px); }
-
-  /* Tablette : 2 colonnes */
-  @media (min-width: 600px) {
-    .grid { grid-template-columns: repeat(2, 1fr); }
-  }
-
-  /* Desktop : Mosaïque 2×2 PLEIN ÉCRAN (en dessous du header) */
-  @media (min-width: 1024px) {
+  @media (min-width: 600px){ .grid { grid-template-columns: repeat(2, 1fr); } }
+  @media (min-width: 1024px){
     body { height: 100vh; display: grid; grid-template-rows: auto 1fr; }
     header { padding: 10px 16px; }
-    .grid {
-      max-width: none; margin: 0;                  /* utilise toute la largeur */
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      height: calc(100vh - 56px);                  /* 56px ≈ hauteur header */
-    }
-    .card {
-      display: grid; grid-template-rows: 1fr auto; /* la vignette remplit la cellule */
-      height: 100%;
-    }
-    .thumb {
-      aspect-ratio: auto;                          /* on laisse la cellule décider */
-      width: 100%; height: 100%;
-      background-size: cover; background-position: center;
-    }
+    .grid { max-width: none; margin: 0; grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(2, 1fr); height: calc(100vh - 56px); }
+    .card { display: grid; grid-template-rows: 1fr auto; height: 100%; }
+    .thumb { aspect-ratio: auto; width: 100%; height: 100%; background-size: cover; background-position: center; }
     .cap { font-size: 15px; }
   }
 </style>
@@ -83,34 +34,32 @@
   <header>Galerie — Consultation uniquement (téléchargement désactivé)</header>
 
   <main class="grid" id="grid">
-    <!-- Remplace les fichiers ci-dessous par les tiens (même dossier) -->
     <figure class="card">
-      <a href="img1.jpeg" data-cap="Photo 1">
-        <div class="thumb" style="background-image:url('img1.jpeg')"></div>
+      <a href="img1.jpg?v=2" data-cap="Photo 1">
+        <div class="thumb" style="background-image:url('img1.jpg?v=2')"></div>
       </a>
       <figcaption class="cap">Photo 1</figcaption>
     </figure>
     <figure class="card">
-      <a href="img2.jpeg" data-cap="Photo 2">
-        <div class="thumb" style="background-image:url('img2.jpeg')"></div>
+      <a href="img2.jpg?v=2" data-cap="Photo 2">
+        <div class="thumb" style="background-image:url('img2.jpg?v=2')"></div>
       </a>
       <figcaption class="cap">Photo 2</figcaption>
     </figure>
     <figure class="card">
-      <a href="img3.jpeg" data-cap="Photo 3">
-        <div class="thumb" style="background-image:url('img3.jpeg')"></div>
+      <a href="img3.jpg?v=2" data-cap="Photo 3">
+        <div class="thumb" style="background-image:url('img3.jpg?v=2')"></div>
       </a>
       <figcaption class="cap">Photo 3</figcaption>
     </figure>
     <figure class="card">
-      <a href="img4.jpeg" data-cap="Photo 4">
-        <div class="thumb" style="background-image:url('img4.jpeg')"></div>
+      <a href="img4.jpg?v=2" data-cap="Photo 4">
+        <div class="thumb" style="background-image:url('img4.jpg?v=2')"></div>
       </a>
       <figcaption class="cap">Photo 4</figcaption>
     </figure>
   </main>
 
-  <!-- Visionneuse -->
   <div class="lightbox" id="box" aria-hidden="true">
     <div class="stage" id="stage" role="dialog" aria-label="Visionneuse"></div>
     <div class="ui">
@@ -130,7 +79,6 @@
   const prevBtn = document.getElementById('prev');
   let idx = 0;
 
-  // Dissuasion : pas de clic droit / drag
   document.addEventListener('contextmenu', e => e.preventDefault());
   document.addEventListener('dragstart', e => e.preventDefault());
 
@@ -156,3 +104,5 @@
 </script>
 </body>
 </html>
+
+
